--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+.container {
+  padding:16px;
+  font-family:"Roboto",sans-serif;
+  text-align:center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container h1{
+  font-size:35px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container h3{
+  font-size:15px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container h2{
+  font-size:25px;
 }
-
-.App-link {
-  color: #61dafb;
+.container button{
+  margin-top:15px;
+  margin-bottom:15px;
+  font-size:15px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container input{
+  width:250px;
 }
